--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MPL-2.0",
   "dependencies": {
     "bech32": "^2.0.0",
+    "blake2b": "^2.1.4",
     "ws": "^8.14.2"
   },
   "scripts": {
-    "start": "node index.mjs"
+    "count": "node count.mjs",
+    "collect": "node collect.mjs"
   }
 }
